<resources>
    <string name="app_name" translatable="false">Baking App</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="title_recipe_step">Recipe Steps</string>

    <string name="toast_no_network">NO NETWORK YET\n Please connect to the internet</string>
    <string name="toast_connecting">Fetching some delicious recipes.....</string>
    <string name="menu_refresh">Refresh</string>
    <string name="load_finished">Loading completed</string>
    <string name="recipe_selected">" selected"</string>
    <string name="no_data">No data to load</string>
    <string name="network_restored">Network connection available</string>

    <!--Image descriptions-->
    <string name="recipe_image_description">Recipe</string>
    <string name="recipe_favorite_description">Mark as favorite</string>
    <string name="recipe_share_description">Share recipe</string>
    <string name="right_nav_description">Go to next step</string>
    <string name="left_nav_description">Go to previous step</string>
    <string name="widget_list_image">Measurement</string>
    <string name="recipe_step_image">Image for recipe step</string>

    <string name="step_intent_key" translatable="false">step_intent</string>
    <string name="step_detail_intent_key" translatable="false">step_detail_intent</string>

    <string name="left_nav_text">Back</string>
    <string name="right_nav_text">Next</string>
    <string name="appwidget_text">No favorite recipe</string>
    <string name="widget_title">My Favorite Recipe</string>
    <string name="add_widget">Add widget</string>

</resources>
