...
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_favorite_border_orange_24dp"
                android:id="@+id/recipe_list_favorite"
                android:layout_below="@+id/recipe_list_text"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/recipe_list_share"
                android:layout_margin="5dp"
                android:contentDescription="@string/recipe_favorite_description"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
...
